(dirs src tests .logistic)

(alias
 (name default)
 (deps
  hlist.opam
  (alias_rec src/default)
  (alias_rec tests/default)))

(rule
 (target dune.extdeps.inc)
 (alias extdeps)
 (mode (promote))
 (action
  (with-stdout-to
   %{target}
   (run %{dep:.logistic/dune/extdeps/extdeps.exe} generate --both metapp))))

(include dune.extdeps.inc)
