(dirs src tests .logistic)

(alias
 (name default)
 (deps
  hlist.opam
  (alias_rec src/default)
  (alias_rec tests/default)))

(rule
 (target dune.inc)
 (alias extdeps)
 (mode (promote))
 (action
  (with-stdout-to
   %{target}
   (run
    %{dep:.logistic/dune/extdeps/extdeps.exe}
    generate
    --cross-both
    metapp))))

(include dune.inc)
